updating project, fixing some errors